SG00338424/src/main/java/com/example/demo/Validation/LecturerPUTValidation.java
package com.example.demo.Validation;

public interface LecturerPUTValidation {

}
